syntax = "proto3";

import "Common.proto";
import "PlayerSummary.proto";

message AccountLoginRequest {
    CommonRequest head = 1;
    string deviceId = 2;
    string publicId = 3;
}

message AccountLoginResponse {
    CommonResponse head = 1;
    string publicId = 2;
    int32 master = 3;
    int32 resource = 4;
    int32 isSavedataExpired = 5;
    Status status = 6;
    string redirectHost = 7;
    PlayerSummary playerSummary = 8;
    ExpireStatus expireStatus = 9;
}

enum Status {
    STATUS_NORMAL = 0;
    STATUS_ADMIN = 1;
    STATUS_STAFF = 2;
    STATUS_WARN = 3;
    STATUS_BLOCK = 4;
}

enum ExpireStatus {
    EXPIRE_STATUS_NONE = 0;
    EXPIRE_STATUS_NEW_DEVICE = 1;
    EXPIRE_STATUS_TOKEN_MISSMATCH = 2;
}