syntax = "proto3";

import "google/protobuf/timestamp.proto";

message CommonRequest {
    google.protobuf.Timestamp timestamp = 1;
    int32 version = 2;
    Platform platform = 3;
    string environment = 4;
}

message CommonResponse {
    int32 code = 1;
    string accessToken = 2;
    string message = 3;
    bool isReboot = 4;
}

message ItemData {
    ItemType type = 1;
    string masterId = 2;
    int32 num = 3;
}

message PresentData {
    int32 presentId = 1;
    PresentType presentType = 2;
    google.protobuf.Timestamp createTime = 3;
    google.protobuf.Timestamp expireTime = 4;
    ItemData itemdata = 5;
    string title = 6;
    string description = 7;
}

enum Platform {
    PLATFORM_EDITOR = 0;
    PLATFORM_APPLE = 1;
    PLATFORM_GOOGLE = 2;
}

enum ItemType {
    ITEM_TYPE_NONE = 0;
    ITEM_TYPE_ACCOUNT_PROP = 1;
    ITEM_TYPE_ITEM = 2;
    ITEM_TYPE_REWARD_PACK = 3;
}

enum Age {
    AGE_NONE = 0;
    AGE_UNDER_16 = 1;
    AGE_UNDER_20 = 2;
    AGE_NO_LIMIT = 3;
}

enum PresentType {
    PRESENT_TYPE_PRESENT = 0;
    PRESENT_TYPE_PRESENT_OPENED = 1;
    PRESENT_TYPE_LOGIN_BONUS = 2;
    PRESENT_TYPE_LOGIN_BONUS_OPENED = 3;
}